Standalone youtube player

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_standalone">StandaloneActivity</string>
     <string name="play_video">Play Video</string>
+    <string name="play_playlist">Play Playlist</string>
 
 </resources>
